# polyquery

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
editors/emacs/: polyquery.el
editors/neovim/lua/polyquery/: init.lua
editors/vscode/: package.json
editors/vscode/src/: extension.ts
src/: backend.rs  completion.rs  config.rs  execution.rs  lib.rs  main.rs
src/language/: mod.rs
src/schema/: mod.rs
src/sql/: mod.rs
tests/: integration_test.rs
