[package]
name = "polyquery"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-scala = "0.26"
tree-sitter-swift = "0.7"
tree-sitter-elixir = "0.3"
tree-sitter-sequel = "0.3"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"], optional = true }
